--- a/index.html
+++ b/index.html
@@ -8,11 +8,55 @@
 <style>
   :root{--gold:#FFD700;--green:#009B48;--dark:#0a0a0a}
   *{margin:0;padding:0;box-sizing:border-box}
-  body{background:var(--dark);color:#fff;font-family:-apple-system,system-ui,sans-serif;min-height:100dvh;display:flex;flex-direction:column;overflow:hidden}
-  .c{position:relative;z-index:2;flex:1;display:flex;flex-direction:column;align-items:center;justify-content:center;padding:2rem 1rem;text-align:center;max-width:420px;margin:0 auto;width:100%;gap:2rem}
-  h1{font-size:clamp(6rem,16vw,12rem);font-weight:900;background:linear-gradient(45deg,#fff,var(--gold),#FFEDAB);-webkit-background-clip:text;-webkit-text-fill-color:transparent;line-height:0.88;letter-spacing:-4px}
+  body{
+    background: url('IMG_0040.jpeg') center/cover no-repeat fixed;
+    color:#fff;
+    font-family:-apple-system,system-ui,sans-serif;
+    min-height:100dvh;
+    display:flex;
+    flex-direction:column;
+    overflow:hidden;
+  }
+  .overlay{
+    position:fixed;inset:0;
+    background:rgba(0,0,0,0.68);
+    backdrop-filter:blur(2px);
+  }
+  .c{
+    position:relative;z-index:2;
+    flex:1;
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    justify-content:center;
+    padding:2rem 1rem;
+    text-align:center;
+    max-width:420px;
+    margin:0 auto;
+    width:100%;
+    gap:2rem;
+  }
+  h1{
+    font-size:clamp(6rem,16vw,12rem);
+    font-weight:900;
+    background:linear-gradient(45deg,#fff,var(--gold),#FFEDAB);
+    -webkit-background-clip:text;
+    -webkit-text-fill-color:transparent;
+    line-height:0.88;
+    letter-spacing:-4px;
+  }
   .motto{font-size:1.9rem;font-weight:700;letter-spacing:1.5px}
-  .btn{width:88dvw;max-width:380px;padding:1.9rem;border-radius:30px;font-size:2.1rem;font-weight:900;border:none;cursor:pointer;box-shadow:0 20px 50px rgba(0,0,0,0.8);transition:all .3s;user-select:none}
+  .btn{
+    width:88dvw;max-width:380px;
+    padding:1.9rem;
+    border-radius:30px;
+    font-size:2.1rem;
+    font-weight:900;
+    border:none;
+    cursor:pointer;
+    box-shadow:0 20px 50px rgba(0,0,0,0.8);
+    transition:all .3s;
+  }
   .gold{background:var(--gold);color:#000}
   .dark{background:var(--dark);color:var(--gold);border:3px solid var(--gold)}
   .green{background:var(--green);color:#fff;border:6px solid var(--gold);box-shadow:0 0 40px rgba(255,215,0,0.6);animation:pulse 2s infinite}
@@ -20,17 +64,35 @@
   .btn:active{transform:scale(0.94)}
   .lynk{color:var(--gold);font-size:1.5rem;font-weight:700;margin-top:1rem}
   #journey{width:100%;margin:1rem 0;overflow-y:auto;padding-bottom:12rem}
-  .stay{background:var(--green);border:5px solid var(--gold);padding:1.4rem;margin:1rem;border-radius:20px;overflow:hidden;box-shadow:0 12px 40px rgba(0,0,0,0.7);animation:slideUp .6s ease-out}
+  .stay{
+    background:var(--green);
+    border:5px solid var(--gold);
+    padding:1.4rem;
+    margin:1rem;
+    border-radius:20px;
+    overflow:hidden;
+    box-shadow:0 12px 40px rgba(0,0,0,0.7);
+    animation:slideUp .6s ease-out;
+  }
   @keyframes slideUp{from{transform:translateY(60px);opacity:0}to{transform:none;opacity:1}}
   .stay img{width:100%;height:180px;object-fit:cover;border-radius:16px;margin-bottom:12px}
-  .panel{position:fixed;bottom:0;left:0;right:0;background:rgba(0,155,72,0.99);border-top:6px solid var(--gold);padding:1.5rem;border-radius:36px 36px 0 0;z-index:30;transform:translateY(100%);transition:transform .4s cubic-bezier(0.23,1,0.32,1)}
+  .panel{
+    position:fixed;bottom:0;left:0;right:0;
+    background:rgba(0,155,72,0.99);
+    border-top:6px solid var(--gold);
+    padding:1.5rem;
+    border-radius:36px 36px 0 0;
+    z-index:30;
+    transform:translateY(100%);
+    transition:transform .4s cubic-bezier(0.23,1,0.32,1);
+  }
   .panel.active{transform:translateY(0)}
   .close{position:absolute;top:10px;right:16px;font-size:2.8rem;background:none;border:none;color:#fff;cursor:pointer}
   .num{width:64px;height:64px;line-height:64px;font-size:2.2rem;background:var(--dark);color:var(--gold);border-radius:50%;margin:0 14px;font-weight:900}
 </style>
 </head>
 <body>
-
+<div class="overlay"></div>
 <div class="c">
   <h1>YAAD<br>VIBE</h1>
   <p class="motto">One Love One Jamaica</p>
@@ -62,8 +124,7 @@
 <script type="module">
   import { WalletConnectModal } from 'https://unpkg.com/@walletconnect/modal@2/dist/index.js';
 
-  const PROJECT_ID = "YOUR_PROJECT_ID_HERE";
-  const LYNK = "Jamaica Lynk";
+  const PROJECT_ID = "YOUR_WALLETCONNECT_PROJECT_ID";
 
   let traveller = {a:1, c:0, i:0, pets:"No"};
   let stays = [], stage = 0;
@@ -110,7 +171,7 @@
         <div style="font-weight:900;font-size:1.5rem;margin-top:8px">
           ${s.name}<br>
           <span style="color:var(--gold);font-size:1.8rem">$${calcPrice(s.price)} USD</span><br>
-          <small style="opacity:0.9">→ ${LYNK} instant payout</small>
+          <small style="opacity:0.9">Instant payout Jamaica Lynk</small>
         </div>
       </div>
     `).join("");
@@ -123,7 +184,8 @@
       stage++;
       const stay = sacred[stage-1] || sacred[Math.floor(Math.random()*sacred.length)];
       stays.push(stay);
-      document.getElementById("primary").textContent = ["Transport","Activities","Nyam","Vybes","MINT SBT + PAY"][stage-1] || "MINT SBT + PAY";
+      const labels = ["Choose Yaad Stay","Transport","Activities","Nyam","Vybes"];
+      document.getElementById("primary").textContent = labels[stage-1] || "MINT & SEND TO LYNK";
       if(stage===5){
         document.getElementById("primary").textContent = "MINT & SEND TO LYNK";
         document.getElementById("primary").classList.add("green");
@@ -143,7 +205,7 @@
     if(!modal) modal = new WalletConnectModal({projectId: PROJECT_ID, themeMode:"dark"});
     try {
       await modal.connect().then(x=>x.approval());
-      alert("YAADVIBE MINTED!\nJamaica Lynk just got paid\nRebuild stronger Jamaica");
+      alert("YAADVIBE SOULBOUND MINTED!\nMoney flowing direct to Jamaica Lynk\nRebuild stronger");
     } catch(e) { console.log(e); }
   };
 
